[gd_scene load_steps=18 format=2]

[ext_resource path="res://models/worlds/grassland/Background parts/_Complete_static_BG_(288 x 208).png" type="Texture" id=1]
[ext_resource path="res://models/worlds/grassland/Background parts/5 - Sky_color.png" type="Texture" id=2]
[ext_resource path="res://fonts/PressStart2P.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://scripts/startScreen.gd" type="Script" id=4]
[ext_resource path="res://config/DUNGEON007B.ogg" type="AudioStream" id=5]

[sub_resource type="Theme" id=2]
Button/colors/font_color = Color( 0.878431, 0.878431, 0.878431, 1 )
Button/fonts/font = null

[sub_resource type="TileSet" id=9]
0/name = "_Complete_static_BG_(288 x 208).png 0"
0/texture = ExtResource( 1 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 0, 0, 288, 192 )
0/tile_mode = 1
0/autotile/bitmask_mode = 0
0/autotile/bitmask_flags = [  ]
0/autotile/icon_coordinate = Vector2( 0, 0 )
0/autotile/tile_size = Vector2( 32, 32 )
0/autotile/spacing = 0
0/autotile/occluder_map = [  ]
0/autotile/navpoly_map = [  ]
0/autotile/priority_map = [  ]
0/autotile/z_index_map = [  ]
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape_one_way = false
0/shape_one_way_margin = 0.0
0/shapes = [  ]
0/z_index = 0
1/name = "_Complete_static_BG_(288 x 208).png 1"
1/texture = ExtResource( 1 )
1/tex_offset = Vector2( 0, 0 )
1/modulate = Color( 1, 1, 1, 1 )
1/region = Rect2( 0, 0, 288, 160 )
1/tile_mode = 0
1/occluder_offset = Vector2( 0, 0 )
1/navigation_offset = Vector2( 0, 0 )
1/shape_offset = Vector2( 0, 0 )
1/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
1/shape_one_way = false
1/shape_one_way_margin = 0.0
1/shapes = [  ]
1/z_index = 0
2/name = "_Complete_static_BG_(288 x 208).png 2"
2/texture = ExtResource( 1 )
2/tex_offset = Vector2( 0, 0 )
2/modulate = Color( 1, 1, 1, 1 )
2/region = Rect2( 0, 128, 288, 96 )
2/tile_mode = 0
2/occluder_offset = Vector2( 0, 0 )
2/navigation_offset = Vector2( 0, 0 )
2/shape_offset = Vector2( 0, 0 )
2/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
2/shape_one_way = false
2/shape_one_way_margin = 0.0
2/shapes = [  ]
2/z_index = 0
3/name = "5 - Sky_color.png 3"
3/texture = ExtResource( 2 )
3/tex_offset = Vector2( 0, 0 )
3/modulate = Color( 1, 1, 1, 1 )
3/region = Rect2( 0, 0, 288, 192 )
3/tile_mode = 0
3/occluder_offset = Vector2( 0, 0 )
3/navigation_offset = Vector2( 0, 0 )
3/shape_offset = Vector2( 0, 0 )
3/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
3/shape_one_way = false
3/shape_one_way_margin = 0.0
3/shapes = [  ]
3/z_index = 0

[sub_resource type="StyleBoxFlat" id=18]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[sub_resource type="StyleBoxFlat" id=19]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[sub_resource type="StyleBoxFlat" id=20]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[sub_resource type="StyleBoxFlat" id=21]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[sub_resource type="StyleBoxFlat" id=22]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[sub_resource type="Theme" id=8]
Button/colors/font_color = Color( 0.88, 0.88, 0.88, 1 )
Button/colors/font_color_disabled = Color( 0.9, 0.9, 0.9, 0.2 )
Button/colors/font_color_focus = Color( 0.94, 0.94, 0.94, 1 )
Button/colors/font_color_hover = Color( 0.94, 0.94, 0.94, 1 )
Button/colors/font_color_pressed = Color( 1, 1, 1, 1 )
Button/constants/hseparation = 2
Button/fonts/font = null
Button/styles/disabled = SubResource( 18 )
Button/styles/focus = SubResource( 19 )
Button/styles/hover = SubResource( 20 )
Button/styles/normal = SubResource( 21 )
Button/styles/pressed = SubResource( 22 )

[sub_resource type="DynamicFont" id=1]
size = 21
outline_size = 2
outline_color = Color( 0, 0.619608, 0.760784, 1 )
use_mipmaps = true
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=15]
size = 17
outline_size = 4
outline_color = Color( 0.133333, 0.239216, 0.607843, 1 )
extra_spacing_top = 300
extra_spacing_bottom = 10
extra_spacing_space = 2
font_data = ExtResource( 3 )

[sub_resource type="StyleBoxFlat" id=16]
bg_color = Color( 0, 0, 0, 0.686275 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
shadow_color = Color( 0.0117647, 0.0117647, 0.0117647, 0 )
shadow_size = 4

[sub_resource type="DynamicFont" id=17]
size = 48
outline_color = Color( 1, 0.0196078, 0.0196078, 1 )
font_data = ExtResource( 3 )

[node name="startscreen" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -2.0
margin_right = -2.0
theme = SubResource( 2 )
script = ExtResource( 4 )

[node name="TileMap" type="TileMap" parent="."]
tile_set = SubResource( 9 )
format = 1
tile_data = PoolIntArray( 0, 3, 0, 4, 3, 0, 8, 3, 0, 12, 3, 0, 196608, 3, 0, 196612, 3, 0, 196616, 3, 0, 196620, 3, 0, 393216, 1, 0, 393220, 1, 0, 393224, 1, 0, 393228, 1, 0, 524288, 2, 0, 524292, 2, 0, 524296, 2, 0, 524300, 2, 0 )

[node name="controls" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -84.0
margin_top = -74.0
margin_right = 105.0
margin_bottom = 70.0
custom_constants/separation = 20

[node name="start_btn" type="Button" parent="controls"]
margin_right = 189.0
margin_bottom = 21.0
focus_neighbour_top = NodePath("../exit_btn")
theme = SubResource( 8 )
custom_colors/font_color_focus = Color( 0.87451, 0.72549, 0.0352941, 1 )
custom_colors/font_color = Color( 0.929412, 0.862745, 0.862745, 1 )
custom_colors/font_color_hover = Color( 0.972549, 0.12549, 0.12549, 1 )
custom_colors/font_color_pressed = Color( 0.964706, 0.0941176, 0.211765, 1 )
custom_fonts/font = SubResource( 1 )
text = "JOGAR"

[node name="control_btn" type="Button" parent="controls"]
margin_top = 41.0
margin_right = 189.0
margin_bottom = 62.0
theme = SubResource( 8 )
custom_colors/font_color_focus = Color( 0.909804, 0.835294, 0.0352941, 1 )
custom_colors/font_color = Color( 0.929412, 0.862745, 0.862745, 1 )
custom_colors/font_color_hover = Color( 0.972549, 0.12549, 0.12549, 1 )
custom_colors/font_color_pressed = Color( 0.952941, 0.054902, 0.117647, 1 )
custom_fonts/font = SubResource( 1 )
text = "CONTROLES"

[node name="about_btn" type="Button" parent="controls"]
margin_top = 82.0
margin_right = 189.0
margin_bottom = 103.0
theme = SubResource( 8 )
custom_colors/font_color_focus = Color( 0.909804, 0.835294, 0.0352941, 1 )
custom_colors/font_color = Color( 0.929412, 0.862745, 0.862745, 1 )
custom_colors/font_color_hover = Color( 0.972549, 0.12549, 0.12549, 1 )
custom_colors/font_color_pressed = Color( 0.952941, 0.054902, 0.117647, 1 )
custom_fonts/font = SubResource( 1 )
text = "SOBRE"

[node name="exit_btn" type="Button" parent="controls"]
margin_top = 123.0
margin_right = 189.0
margin_bottom = 144.0
focus_neighbour_bottom = NodePath("../start_btn")
theme = SubResource( 8 )
custom_colors/font_color_focus = Color( 0.866667, 0.87451, 0.054902, 1 )
custom_colors/font_color = Color( 0.929412, 0.862745, 0.862745, 1 )
custom_colors/font_color_hover = Color( 0.972549, 0.12549, 0.12549, 1 )
custom_colors/font_color_pressed = Color( 0.929412, 0.0862745, 0.203922, 1 )
custom_fonts/font = SubResource( 1 )
text = "SAIR"

[node name="Label" type="Label" parent="controls/exit_btn"]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -532.5
margin_top = -360.5
margin_right = 586.5
margin_bottom = 379.5
custom_fonts/font = SubResource( 15 )
custom_styles/normal = SubResource( 16 )
text = "						Saindo do game !!!!"
align = 1

[node name="gameName" type="Label" parent="."]
margin_left = 41.0
margin_top = 95.0
margin_right = 1001.0
margin_bottom = 146.0
rect_min_size = Vector2( 650, 0 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 17 )
text = "CONHECIMENTO EM AÇÃO"
align = 1
valign = 1

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
autoplay = true

[connection signal="pressed" from="controls/start_btn" to="." method="_on_start_btn_pressed"]
[connection signal="pressed" from="controls/start_btn" to="controls/start_btn" method="_on_start_btn_pressed"]
[connection signal="pressed" from="controls/control_btn" to="." method="_on_control_btn_pressed"]
[connection signal="pressed" from="controls/about_btn" to="." method="_on_about_btn_pressed"]
[connection signal="pressed" from="controls/exit_btn" to="." method="_on_exit_btn_pressed"]
